# logging-tools

./: CMakeLists.txt  README.md  log.hpp  main.cpp
src/: LogAppender.cpp  LogAppender.h  Logger.cpp  Logger.h  buffer.cpp  buffer.h  log_appender.cpp  log_appender.h  log_level.h  logger.cpp  logger.h  time.cpp  time.h  time.hpp  time_stamp.cpp  time_stamp.h
